# public/swagger.json
@@ -17,6 +17,46 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"Quote": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"created_at": {
+						"type": "string"
+					},
+					"author": {
+						"type": "string"
+					},
+					"quote": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"created_at",
+					"author",
+					"quote"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"QuoteResponse": {
+				"properties": {
+					"quotes": {
+						"items": {
+							"$ref": "#/components/schemas/Quote"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"quotes"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -51,6 +91,48 @@
 				},
 				"security": [],
 				"parameters": []
+			}
+		},
+		"/quote/{id}": {
+			"get": {
+				"operationId": "GetQuote",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/QuoteResponse"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"quotes": [
+												{
+													"id": 1,
+													"author": "Author Authorsson",
+													"quote": "He once said something.",
+													"created_at": "2023-06-13 00:00:00"
+												}
+											]
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
